--- a/joyas/joya2/joya2.html
+++ b/joyas/joya2/joya2.html
@@ -306,7 +306,7 @@ color:white;
 	<p><strong>🔁 Política de devolución </strong> <br><br>Si han pasado menos de 30 días desde que recibiste tu pedido 📦 y la pieza no te convence 😕 o se ha dañado 💔, puedes solicitar un reemplazo sin problema ✨. ¡Queremos que estés feliz con tu compra! 😊</p>
     <div class="social-links">
       <a href="https://www.instagram.com/kalcifer_studio?igsh=MThmNWs2dWR1M3ptYw==" target="_blank">Instagram</a>
-      <a href="https://vinted.es" target="_blank">Vinted</a>
+      <a href="https://www.vinted.es/member/113438490-kalciferstudio" target="_blank">Vinted</a>
 	  <br><br>
 	  <a href="politica-privacidadcookies" target="_blank" style="background:white; color:red;">Politica de privacidad y Cookies</a>
 	    <p>© <span id="year"></span> Kalcifer Joyas — Todos los derechos reservados</p>
